--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,28 @@
 body{
     background-color: lightgrey;
 }
+
+#navPrincipale{
+
+border: solid;
+text-align: center;
+display:block;
+width:150px;
+line-height:50px;
+color:white;
+text-decoration:none;
+    
+}
+
+#entete, h1{
+color: red;
+text-align: center;
+}
+
+h2{
+    font-style: italic;
+    text-align: center;
+}
+
+
+
