--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
 body{
-    background-color: lightgrey;
+    background-color: rgb(176, 231, 235);
 }
+body>nav {
+    font-size: 50px;
+    text-align: center;
+}
+
