--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
 body{
     background-color: lightgrey;
 }
+
+#entete{
+    font-size:30px;
+    color:rgb(56, 56, 255);
+    text-align: center;
+    font-weight: bold;
+}
