--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
 body{
     background-color: lightgrey;
 }
@@ -6,5 +8,6 @@ body{
     font-size:30px;
     color:rgb(56, 56, 255);
     text-align: center;
+    font-family: 'Montserrat';
     font-weight: bold;
 }
