--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,13 @@
 body {
-  background-color: lightgrey;
+  background-color: white;
 }
 
 div#concerts > footer {
-  background-color: grey;
+  background-color: lightgrey;
   width: 100%;
+  text-align: center;
+  font-family: fantasy;
+  font-size: 20px;
 }
 
 .navigation {
@@ -12,14 +15,14 @@ div#concerts > footer {
   justify-content: flex-end;
   flex-direction: column;
 }
-ul {
+div#concerts > footer > ul {
   list-style: none;
   margin-top: 1%;
 }
-li {
+div#concerts > footer li {
   display: inline-block;
-  background-color: black;
-  padding: 3%;
+  background-color: grey;
+  padding: 1%;
   margin-right: 2%;
 }
 a {
