--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,17 @@
 body{
-    background-color: lightgrey;
+    background-color: #A7CDFF;
 }
+
+h1 {
+    text-align: center;
+    font-size: 3em;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+}
+li{
+   display: inline-block;
+   background-color: white;
+   padding: 1%;
+   margin-right: 2%;
+}
+
