--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,12 @@ body{
 body > nav {
     width: 100%;
     text-align: center;
-    color: crimson;
-    background-color: gold;
+    color: blue;
+    background-color: lightgray;
 }
 
 body > nav > ul > li > a{
-    background-color: red;
+    background-color:lightgray;
 }
 
 }
