--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,21 @@
 body{
     background-color: lightgrey;
 }
+
+#entete{
+    background-color: teal;
+}
+h1{
+    font-family: cursive;
+    text-align: center;
+}
+h2{
+    text-align: center;
+}
+
+img{
+    width: 100%;
+}
+header{
+    background-color: teal;
+}
