background et changement de police dans tous les headers

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,12 @@ h1{
     font-family: cursive;
 }
 #entete{
-    background-color: rgb(75, 131, 96)
+    background-color: cadetblue;
 }
 img{
     width: 100%;
+}
+header{
+    background-color: cadetblue;
+    color: beige;
 }
